--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+
+
     <div class="nav-container">
         <header>
             <a href="index.html" class="logo">ED.</a>
@@ -31,16 +33,20 @@
                 find delightful, relevant and functional solutions to human problems.
             </p>
 
+            <img src="../UX_UI_HW_18/images/Frame 1svg" alt="hero">
+
     </section>
 
 
     <section class="case studies">
 
+        <h3> Case Studies </h3>
+
         <div class="case study1">
-            <img src="../UX_UI_HW_18/images/fairplayimage.png" alt="fairplay images">
-            <h2>Fairplay for all Foundation</h2>
-            <h3>3 week long group redesign project of a non-profit website.  
-            </h3>
+            <img src="../UX_UI_HW_18/.images/fairplayimage.png" alt="fairplay images">
+            <h4>Fairplay for all Foundation</h4>
+            <h5>3 week long group redesign project of a non-profit website.  
+            </h5>
             <p>The challenge: how do we increase trust, emotional connection and 
                 transparency and ultimately increase the number of people who donate 
                 and participate with the Fairplay Foundation.</p>
@@ -49,10 +55,10 @@
         </div>
 
         <div class="case study2">
-            <img src="#" alt="SES images">
-            <h2>SES Queensland</h2>
-            <h3>3 week long solo redesign project of a Government Agency webite.  
-            </h3>
+            <img src="../UX_UI_HW_18/images/sesimage.png" alt="SES images">
+            <h4>SES Queensland</h4>
+            <h5>3 week long solo redesign project of a Government Agency webite.  
+            </h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo 
                 consequatur quisquam reprehenderit iure accusantium eius esse eligendi? 
                 Architecto deleniti expedita a molestias.
@@ -62,10 +68,10 @@
         </div>
 
         <div class="case study3">
-            <img src="#" alt="group project 3 images">
-            <h2>Group Project 3</h2>
-            <h3>3 week long group project.  
-            </h3>
+            <img src="../UX_UI_HW_18/images/groupproject3.png" alt="group project 3 images">
+            <h4>Group Project 3</h4>
+            <h5>3 week long group project.  
+            </h5>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo 
                 consequatur quisquam reprehenderit iure accusantium eius esse eligendi? 
                 Architecto deleniti expedita a molestias.
@@ -75,13 +81,11 @@
         </div>
 
       
-
-
     </section>
 
     <footer>
-        <h2>Eliza Derepas</h2>
-        <h3>UX/UI Designer</h3>
+        <h4>Eliza Derepas</h4>
+        <h4>UX/UI Designer</h4>
         <p>Like what you see? Let's connect!</p>
         <a href="eliza.derepas@gmail.com">eliza.derepas@gmail.com</a></p>
         <div class="socials">
