--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
                 find delightful, relevant and functional solutions to human problems.
             </p>
 
-            <img src="../UX_UI_HW_18/images/Frame 1svg" alt="hero">
+            <img src="images/Frame 1svg" alt="hero">
 
     </section>
 
 
-    <section class="case studies">
+    <section class="case-studies">
 
         <h3> Case Studies </h3>
 
-        <div class="case study1">
-            <img src="../UX_UI_HW_18/.images/fairplayimage.png" alt="fairplay images">
+        <div class="case-study1">
+            <img src="images/fairplayimage.png" alt="fairplay images">
             <h4>Fairplay for all Foundation</h4>
             <h5>3 week long group redesign project of a non-profit website.  
             </h5>
@@ -54,8 +54,8 @@
             <button type="button">View Case Study</button>
         </div>
 
-        <div class="case study2">
-            <img src="../UX_UI_HW_18/images/sesimage.png" alt="SES images">
+        <div class="case-study2">
+            <img src="images/sesimage.png" alt="SES images">
             <h4>SES Queensland</h4>
             <h5>3 week long solo redesign project of a Government Agency webite.  
             </h5>
@@ -67,8 +67,8 @@
             <button type="button">View Case Study</button>
         </div>
 
-        <div class="case study3">
-            <img src="../UX_UI_HW_18/images/groupproject3.png" alt="group project 3 images">
+        <div class="case-study3">
+            <img src="images/groupproject3.png" alt="group project 3 images">
             <h4>Group Project 3</h4>
             <h5>3 week long group project.  
             </h5>
