--- a/about.html
+++ b/about.html
@@ -28,14 +28,13 @@
             <div class="avatar">
                 <div class="avatar-mask shadow-12"> <img src="images/avatar.svg" alt="avatar"></div>
             </div>
-            <h2>I am Eliza, a UX Designer from Brisbane.</h2>
+            <h3>I am Eliza, a UX Designer from Brisbane.</h3>
             <p>Innovative, self-driven and enthusiastic UX Designer. I Recently aquired a Certificate in UX/UI from the University of Adelaide, gaining skills in user-Centric Design Research, Visual Prototyping & Wireframing, and User Interface Development.
                 This is still a work in progress whilst I work out how I want to say what I want to say.
                 <br>
                 <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur quisquam reprehenderit iure accusantium eius esse eligendi? Architecto deleniti expedita a molestias, quaerat quasi maxime unde asperiores tempora dolorem
                 velit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur quisquam reprehenderit iure accusantium eius esse eligendi? Architecto deleniti expedita a molestias, quaerat quasi maxime unde asperiores tempora dolorem
                 velit. <br>
-                <br>
                 <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur quisquam reprehenderit iure accusantium eius esse eligendi? Architecto deleniti expedita a molestias, quaerat quasi maxime unde asperiores tempora dolorem
                 velit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo consequatur quisquam reprehenderit iure accusantium eius esse eligendi? Architecto deleniti expedita a molestias, quaerat quasi maxime unde asperiores tempora dolorem
                 velit. Quaerat quasi maxime unde asperiores tempora dolorem velit.
@@ -45,9 +44,15 @@
             <button type="button">Download Resume</button>
         </div>
     </section>
+
+    <div class="rectangle1"></div>
+    <div class="myskills"> <h3>My<br>Skills</h3></div>
+
     <section class="skills">
+        
+
         <div class="skill">
-            <h2>User Research and Empathy</h2>
+            <h3>User Research and Empathy</h3>
             <p>Understanding the user is my passion and my hobby. I make sure to start every project with questions, 
                 not answers. I use empathy to understand people and their needs by being observant and 
                 asking good questions. This leads to gaining deeper insights. 
@@ -55,34 +60,61 @@
             </p>
         </div>
         <div class="skill">
-            <h2>User Research and Empathy</h2>
+            <h3>User Interviews</h3>
             <p>I use interviews in my design process to get a deeper understanding of the users' behaviour. 
                 I am good at interviewing users and asking the right questions. 
             </p>
         </div>
         <div class="skill">
-            <h2>User Research and Empathy</h2>
+            <h3>UI Design</h2>
             <p>I strive to design interfaces that are easy and enjoyable to use. I use my user insights and 
                 am sure not to lose focus on who I am designing for (not me!). I am proficient in both Adobe XD 
                 and Figma and incorporate simple, useful animations to my designs.
             </p>
         </div>
     </section>
-    <footer>
-        <h2>Eliza Derepas</h2>
-        <h3>UX/UI Designer</h3>
-        <p>Like what you see? Let's connect!</p>
-        <a href="eliza.derepas@gmail.com">eliza.derepas@gmail.com</a></p>
-        <div class="socials">
-            <ul>
-                <li>
-                    <a href="#"><img src="images/behance.svg" alt="behance"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="images/linkedin.svg" alt="linkedin"></a>
-                </li>
-            </ul>
+
+    <section>
+        <div class="rectangle2"></div>
+        
+        <div class="designtools"><h3>Design<br>Tools</h3></div>
+
+        <div class="tools-list">
+        <p>Adobe XD, Figma, Invision, Adobe creative suite, Google suite, Miro, InVision, HTML/CSS, GitHub, 
+            <br>Visual Studio Code</p>
         </div>
+    </section>
+
+    <div class="rectangle3"></div>
+    <div class="photography"><h3>Photography</h3></div>
+
+
+   <main class="grid-container-cols-12">
+       <div class="photo1"><img src="images/card.svg" alt="pic1"></div>
+       <div class="photo2"><img src="images/card.svg" alt="pic2"></div>
+       <div class="photo3"><img src="images/card.svg" alt="pic3"></div>
+       <div class="photo4"><img src="images/card.svg" alt="pic4"></div>
+       <div class="photo5"><img src="images/card.svg" alt="pic5"></div>
+       <div class="photo6"><img src="images/card.svg" alt="pic6"></div>
+   </main>
+
+
+   <footer>
+        <div class="name">Eliza Derepas</div>
+        <div class="title">UX UI Designer</div>
+        <div class="strapline">Like what you see? Let's connect!</div>
+        <div class="email">
+            <a href="eliza.derepas@gmail.com">eliza.derepas@gmail.com</a>
+        </div>
+        <div class="socials">
+                <ul>
+                    <li>
+                        <a href="#"><img src="images/behance.svg" alt="behance"></a></li>
+                    <li>
+                        <a href="#"><img src="images/linkedin.svg" alt="linkedin"></a></li>
+                </ul>
+            </div>
     </footer>
+
 </body>
 </html>
