--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     </div>
     <section class="hero">
         <div class="content">
-            <h1>Welcome<span class="purple">.</span></h1>
+            <div class="welcome-heading"><h1>Welcome<span class="purple">.</span></h1></div>
             <div class="avatar">
                 <div class="avatar-mask shadow-12"> <img src="images/avatar.svg" alt="avatar"></div>
             </div>
